--- a/public/field-groups.html
+++ b/public/field-groups.html
@@ -76,7 +76,7 @@
               <div class="example-box-plain">
                 <fieldset>
                   <label for="field">Field group with buttons</label>
-                  <div class="field-group--buttons">
+                  <div class="field-group field-group--buttons">
                     <input id="field" placeholder="£" type="number">
                     <button class="btn">Week</button>
                     <button class="btn">Month</button>
@@ -86,7 +86,7 @@
               </div>
               <pre><code class="language-html">&lt;fieldset&gt;
 	&lt;label for="field"&gt;Field group with buttons&lt;/label&gt;
-	&lt;div class="field-group"&gt;
+	&lt;div class="field-group field-group--buttons"&gt;
 		&lt;input id="field" placeholder="£" type="number"&gt;
 		&lt;button class="btn"&gt;Week&lt;/button&gt;
 		&lt;button class="btn"&gt;Month&lt;/button&gt;
@@ -96,7 +96,7 @@
               <div class="example-box-plain">
                 <fieldset>
                   <label for="field">Field group with radio buttons</label>
-                  <div class="field-group--radio">
+                  <div class="field-group field-group--radio">
                     <input id="field" placeholder="£" type="number">
                     <label class="radio radio--inline">
                       <input checked name="radio-inline" type="radio" value="option1">Week
@@ -112,7 +112,7 @@
               </div>
               <pre><code class="language-html">&lt;fieldset&gt;
 	&lt;label for="field"&gt;Field group with radio buttons&lt;/label&gt;
-	&lt;div class="field-group--radio"&gt;
+	&lt;div class="field-group field-group--radio"&gt;
 		&lt;input id="field" placeholder="£" type="number"&gt;
 		&lt;label class="radio radio--inline"&gt;
 			&lt;input checked="" name="radio-inline" type="radio" value="option1"&gt;Week
@@ -128,7 +128,7 @@
               <div class="example-box-plain">
                 <fieldset>
                   <label for="field">Field group with dropdown</label>
-                  <div class="field-group--dropdown">
+                  <div class="field-group field-group--dropdown">
                     <input id="field" placeholder="£" type="number">
                     <div class="dropdown">
                       <select id="exampleSelect1">
@@ -142,7 +142,7 @@
               </div>
               <pre><code class="language-html">&lt;fieldset&gt;
 	&lt;label for="field"&gt;Field group with dropdown&lt;/label&gt;
-	&lt;div class="field-group--dropdown"&gt;
+	&lt;div class="field-group field-group--dropdown"&gt;
 		&lt;input id="field" placeholder="£" type="number"&gt;
 		&lt;div class="dropdown"&gt;
 			&lt;select id="exampleSelect1"&gt;
