--- a/public/new-grid.html
+++ b/public/new-grid.html
@@ -49,43 +49,21 @@
           </div>
           <div class="row">
             <div class="span12">
-              <h3>Two Thirds (content first)</h3>
-            </div>
-            <div class="span8">
-              <div class="example-box">2/3<code>span8</code></div>
-            </div>
-            <div class="span4">
-              <div class="example-box">1/3<code>span4</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>Two Thirds (navigation first)</h3>
-            </div>
-            <div class="span4">
-              <div class="example-box">1/3<code>span4</code></div>
-            </div>
-            <div class="span8">
-              <div class="example-box">2/3<code>span8</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>One Quarter</h3>
-            </div>
-            <div class="span3">
-              <div class="example-box">1/4<code>span3</code></div>
-            </div>
-            <div class="span9">
-              <div class="example-box">3/4<code>span9</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
               <h3>Full Width</h3>
             </div>
             <div class="span12">
-              <div class="example-box">1/1<code>span12</code></div>
+              <div class="example-box-full">1/1<code>span12</code></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span12">
+              <h3>Half Width</h3>
+            </div>
+            <div class="span6">
+              <div class="example-box-full">1/2<code>span6</code></div>
+            </div>
+            <div class="span6">
+              <div class="example-box-full">1/2<code>span6</code></div>
             </div>
           </div>
           <div class="row">
@@ -93,13 +71,13 @@
               <h3>Thirds</h3>
             </div>
             <div class="span4">
-              <div class="example-box">1/3<code>span4</code></div>
+              <div class="example-box-full">1/3<code>span4</code></div>
             </div>
             <div class="span4">
-              <div class="example-box">1/3<code>span4</code></div>
+              <div class="example-box-full">1/3<code>span4</code></div>
             </div>
             <div class="span4">
-              <div class="example-box">1/3<code>span4</code></div>
+              <div class="example-box-full">1/3<code>span4</code></div>
             </div>
           </div>
           <div class="row">
@@ -107,16 +85,91 @@
               <h3>Quarters</h3>
             </div>
             <div class="span3">
-              <div class="example-box">1/4<code>span3</code></div>
+              <div class="example-box-full">1/4<code>span3</code></div>
             </div>
             <div class="span3">
-              <div class="example-box">1/4<code>span3</code></div>
+              <div class="example-box-full">1/4<code>span3</code></div>
             </div>
             <div class="span3">
-              <div class="example-box">1/4<code>span3</code></div>
+              <div class="example-box-full">1/4<code>span3</code></div>
             </div>
             <div class="span3">
-              <div class="example-box">1/4<code>span3</code></div>
+              <div class="example-box-full">1/4<code>span3</code></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span12">
+              <h3>Twelfth</h3>
+              <p>Maximum columns</p>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+            <div class="span1">
+              <div class="example-box-full"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span12">
+              <h3>Two Thirds (content first)</h3>
+            </div>
+            <div class="span8">
+              <div class="example-box-full">2/3<code>span8</code></div>
+            </div>
+            <div class="span4">
+              <div class="example-box-full">1/3<code>span4</code></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span12">
+              <h3>Two Thirds (navigation first)</h3>
+            </div>
+            <div class="span4">
+              <div class="example-box-full">1/3<code>span4</code></div>
+            </div>
+            <div class="span8">
+              <div class="example-box-full">2/3<code>span8</code></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span12">
+              <h3>One Quarter</h3>
+            </div>
+            <div class="span3">
+              <div class="example-box-full">1/4<code>span3</code></div>
+            </div>
+            <div class="span9">
+              <div class="example-box-full">3/4<code>span9</code></div>
             </div>
           </div>
           <div class="row">
@@ -124,13 +177,13 @@
               <h3>Flexible (defined with mixin in LESS)</h3>
             </div>
             <div class="customcol49">
-              <div class="example-box">4/9<code>.col(4,9);</code></div>
+              <div class="example-box-full">4/9<code>.col(4,9);</code></div>
             </div>
             <div class="customcol13">
-              <div class="example-box">3/9<code>.col(1,3);</code></div>
+              <div class="example-box-full">3/9<code>.col(1,3);</code></div>
             </div>
             <div class="customcol29">
-              <div class="example-box">2/9<code>.col(2,9);</code></div>
+              <div class="example-box-full">2/9<code>.col(2,9);</code></div>
             </div>
           </div>
         </div>
