Improvements to field groups

--- a/public/budgeting-tool.html
+++ b/public/budgeting-tool.html
@@ -137,13 +137,13 @@
                   </div>
                 </div>
                 <div class="function">
-                  <button type="button" class="btn btn-secondary">
+                  <button type="button" class="btn btn-success">
                     <div class="fa fa-plus"></div>
                   </button>
                 </div>
               </div>
             </fieldset>
-            <button type="button" class="btn btn-primary-cancel back-button-icon">Income</button>
+            <button type="button" class="btn btn-primary-light left-button-icon">Income</button>
             <button type="button" class="btn btn-primary right-button-icon">Household</button>
           </div>
           <div class="side-nav-beta">
