--- a/public/budgeting-tool.html
+++ b/public/budgeting-tool.html
@@ -91,7 +91,7 @@
                   </div>
                 </div>
                 <div class="function">
-                  <button type="button" class="btn btn-warning">
+                  <button type="button" class="btn btn-primary-cancel">
                     <div class="fa fa-trash"></div>
                   </button>
                 </div>
@@ -113,7 +113,7 @@
                   </div>
                 </div>
                 <div class="function">
-                  <button type="button" class="btn btn-warning">
+                  <button type="button" class="btn btn-primary-cancel">
                     <div class="fa fa-trash"></div>
                   </button>
                 </div>
