--- a/public/field-groups.html
+++ b/public/field-groups.html
@@ -78,10 +78,12 @@
                   <label for="field">Field group with buttons</label>
                   <div class="field-group field-group--buttons">
                     <input id="field" placeholder="£" type="number">
+                    <!-- This annoyingly needs to be in to stop the button taking a new line-->
                     <div style="display:table-cell;"></div>
                     <button class="btn">Week</button>
                     <button class="btn">Month</button>
                     <button class="btn">Year</button>
+                    <button class="btn">Button</button>
                   </div>
                 </fieldset>
               </div>
@@ -89,10 +91,12 @@
 	&lt;label for="field"&gt;Field group with buttons&lt;/label&gt;
 	&lt;div class="field-group field-group--buttons"&gt;
 		&lt;input id="field" placeholder="£" type="number"&gt;
+		&lt;!-- This annoyingly needs to be in to stop the button taking a new line--&gt;
 		&lt;div style="display:table-cell;"&gt;&lt;/div&gt;
 		&lt;button class="btn"&gt;Week&lt;/button&gt;
 		&lt;button class="btn"&gt;Month&lt;/button&gt;
 		&lt;button class="btn"&gt;Year&lt;/button&gt;
+		&lt;button class="btn"&gt;Button&lt;/button&gt;
 	&lt;/div&gt;
 &lt;/fieldset&gt;</code></pre>
               <div class="example-box-plain">
