Removed trash button in place of text link

--- a/public/budgeting-tool.html
+++ b/public/budgeting-tool.html
@@ -76,52 +76,34 @@
           <div class="main-content__right">
             <h2 style="margin-top: 0;">2. Benefits</h2>
             <fieldset>
-              <label for="income">Income support</label>
-              <div class="group">
-                <div class="field">
-                  <div class="field-group field-group--dropdown">
-                    <input id="income" placeholder="£" type="number">
-                    <div class="dropdown">
-                      <select id="exampleSelect1">
-                        <option>Weekly</option>
-                        <option>Monthly</option>
-                        <option>Yearly</option>
-                      </select>
-                    </div>
-                  </div>
-                </div>
-                <div class="function">
-                  <button type="button" class="btn btn-primary-cancel">
-                    <div class="fa fa-trash"></div>
-                  </button>
+              <label for="income">Income support<a href="#" style="color:red;border-color:currentColor;float:right;">Remove</a></label>
+              <div class="field-group field-group--dropdown">
+                <input id="income" placeholder="£" type="number">
+                <div class="dropdown">
+                  <select id="exampleSelect1">
+                    <option>Weekly</option>
+                    <option>Monthly</option>
+                    <option>Yearly</option>
+                  </select>
                 </div>
               </div>
             </fieldset>
             <fieldset>
-              <label for="income">Tax credit</label>
-              <div class="group">
-                <div class="field">
-                  <div class="field-group field-group--dropdown">
-                    <input id="income" placeholder="£" type="number">
-                    <div class="dropdown">
-                      <select id="exampleSelect1">
-                        <option>Weekly</option>
-                        <option>Monthly</option>
-                        <option>Yearly</option>
-                      </select>
-                    </div>
-                  </div>
-                </div>
-                <div class="function">
-                  <button type="button" class="btn btn-primary-cancel">
-                    <div class="fa fa-trash"></div>
-                  </button>
+              <label for="income">Tax credit<a href="#" style="color:red;border-color:currentColor;float:right;">Remove</a></label>
+              <div class="field-group field-group--dropdown">
+                <input id="income" placeholder="£" type="number">
+                <div class="dropdown">
+                  <select id="exampleSelect1">
+                    <option>Weekly</option>
+                    <option>Monthly</option>
+                    <option>Yearly</option>
+                  </select>
                 </div>
               </div>
             </fieldset>
-            <fieldset class="well">
+            <fieldset>
               <label for="addbenefit">Add another benefit</label>
-              <div class="group">
+              <div class="group well">
                 <div class="field">
                   <div style="width:100%;" class="dropdown">
                     <select id="exampleSelect1">
