Re-arranged some styles for budgeting tool

--- a/public/budgeting-tool.html
+++ b/public/budgeting-tool.html
@@ -76,7 +76,7 @@
           <div class="main-content__right">
             <h2 style="margin-top: 0;">2. Benefits</h2>
             <fieldset>
-              <label for="income">Income support<a href="#" style="color:red;border-color:currentColor;float:right;">Remove</a></label>
+              <label for="income">Income support<a href="#" class="remove">Remove</a></label>
               <div class="field-group field-group--dropdown">
                 <input id="income" placeholder="£" type="number">
                 <div class="dropdown">
@@ -89,7 +89,7 @@
               </div>
             </fieldset>
             <fieldset>
-              <label for="income">Tax credit<a href="#" style="color:red;border-color:currentColor;float:right;">Remove</a></label>
+              <label for="income">Tax credit<a href="#" class="remove">Remove</a></label>
               <div class="field-group field-group--dropdown">
                 <input id="income" placeholder="£" type="number">
                 <div class="dropdown">
@@ -103,7 +103,7 @@
             </fieldset>
             <fieldset>
               <label for="addbenefit">Add another benefit</label>
-              <div class="group well">
+              <div class="field-group well">
                 <div class="field">
                   <div style="width:100%;" class="dropdown">
                     <select id="exampleSelect1">
