Add content-tool and well style

--- a/public/content-tool.html
+++ b/public/content-tool.html
@@ -96,7 +96,7 @@
               <h2>The support group</h2>
               <p>If you’ve been put in the support group, it means the DWP has decided that you can’t work and that it doesn’t expect you to do anything to improve your chances of finding work.</p>
               <p>However, if you’re in this group and decide that you want to take part in work-related activity anyway, you can do. Use the contact details on your decision letter to let the DWP know you want to do this. They’ll let you know if there’s any suitable work-related activity going on in your area that you can join.</p>
-              <h2>The work-related activity groupAdd reference</h2>
+              <h2>The work-related activity group</h2>
               <p>If you’ve been put into the work-related activity group it means the DWP has decided that your disability or health condition does limit your ability to work right now, but that there are things you can do to improve this.</p>
               <p>You’re not expected to look for work, but you can be asked to go to a work-focused interview and then do work-related activities. These activities are things that the DWP thinks will improve your chances of working in the future.</p>
               <p>You won’t need to go to a work-focused interview or do any work-related activities if:
@@ -105,37 +105,19 @@
                   <li>you’ve reached Pension Credit age</li>
                 </ul>
               </p>
-              <div style="background-color:#DFDFDF !important;" class="well">
+              <div class="well--outline">
                 <h2>Check if your age excludes you from the work-related group interviews and activities</h2>
                 <p>Answer 2 questions to see if your age excludes you from the work-related group interviews and activities</p>
                 <button type="button" class="btn btn-primary right-button-icon">Start</button>
               </div>
               <h2>Outcomes</h2>
-              <div style="background-color:#DFDFDF !important;" class="well">
+              <div class="well--outline">
+                <h2>Your result</h2>
                 <div class="callout">
                   <h3>You will have to do work-focused interviews and work-related activities.</h3>
-                  <p>This is because you won’t reach Pension Credit age until 9 September 2048.</p>
                 </div>
-                <button type="reset" class="btn btn-secondary restart-button-icon">Restart</button>
-                <button type="button" class="btn btn-secondary print-button-icon">Print</button>
-              </div>
-              <div style="background-color:#A2D5FF !important;" class="well">
-                <h2>You will have to do work-focused interviews and work-related activities.</h2>
                 <p>This is because you won’t reach Pension Credit age until 9 September 2048.</p>
                 <button type="reset" class="btn btn-secondary restart-button-icon">Restart</button>
-                <button type="button" class="btn btn-secondary print-button-icon">Print</button>
-              </div>
-              <div style="background-color:#FFEBC6 !important;" class="well">
-                <h2>You will have to do work-focused interviews and work-related activities.</h2>
-                <p>This is because you won’t reach Pension Credit age until 9 September 2048.</p>
-                <button type="reset" class="btn btn-secondary restart-button-icon">Restart</button>
-                <button type="button" class="btn btn-secondary print-button-icon">Print</button>
-              </div>
-              <div style="background-color:#D3E8C1 !important;" class="well">
-                <h2>You won’t have to do work-focused interviews or work-related activities.</h2>
-                <p>This is because you reached Pension Credit age on 9 September 1980.</p>
-                <button type="reset" class="btn btn-secondary restart-button-icon">Restart</button>
-                <button type="button" class="btn btn-secondary print-button-icon">Print</button>
               </div>
               <div class="callout--related">
                 <h3>Next steps</h3>
