New styles for logo, improved print and mmobile logos, also improved svg (removed whitepsace)

--- a/public/field-groups.html
+++ b/public/field-groups.html
@@ -80,6 +80,9 @@
                     <input id="field" placeholder="£" type="number">
                     <!-- This annoyingly needs to be in to stop the button taking a new line-->
                     <div style="display:table-cell;"></div>
+                    <button class="btn">Week</button>
+                    <button class="btn">Month</button>
+                    <button class="btn">Year</button>
                     <button class="btn">Button</button>
                   </div>
                 </fieldset>
@@ -90,6 +93,9 @@
 		&lt;input id="field" placeholder="£" type="number"&gt;
 		&lt;!-- This annoyingly needs to be in to stop the button taking a new line--&gt;
 		&lt;div style="display:table-cell;"&gt;&lt;/div&gt;
+		&lt;button class="btn"&gt;Week&lt;/button&gt;
+		&lt;button class="btn"&gt;Month&lt;/button&gt;
+		&lt;button class="btn"&gt;Year&lt;/button&gt;
 		&lt;button class="btn"&gt;Button&lt;/button&gt;
 	&lt;/div&gt;
 &lt;/fieldset&gt;</code></pre>
