--- a/public/content.html
+++ b/public/content.html
@@ -29,7 +29,7 @@
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
     <header class="main-header">
-      <div class="main-header__content"><a href="" title="Citizens Advice home" class="main-header__logo"><img alt="Citizens Advice" src="assets/images/ca-logo_100px.svg"></a><a href="" title="Citizens Advice home" class="main-header__logo wide"><img alt="Citizens Advice" src="assets/images/CA-logo-hz-280px.svg"></a>
+      <div class="main-header__content"><a href="" title="Citizens Advice home" class="main-header__logo no-print"><img alt="Citizens Advice" src="assets/images/ca-logo_100px.svg"></a><a href="" title="Citizens Advice home" class="main-header__logo no-print wide"><img alt="Citizens Advice" src="assets/images/ca-logo-hz-white-280px.svg"></a><a href="" title="Citizens Advice home" class="main-header__logo print-only"><img alt="Citizens Advice" src="assets/images/ca-logo-hz-280px.svg"></a>
         <div data-track-zone="top-bar" class="main-header__links"><a href="" class="main-header__menu-link js-toggle-menu"><i class="icon-menu"></i>Menu</a>
           <nav class="main-header__top-nav"><a href="#">Cymraeg</a></a><a href="" class="hide-offline main-header__login"><i class="icon-key"></i>Sign-in</a></nav>
           <form action="" class="main-header__search hide-offline">
