--- a/public/budgeting-tool.html
+++ b/public/budgeting-tool.html
@@ -125,18 +125,18 @@
             </fieldset>
             <button type="button" class="btn btn-primary-light left-button-icon">Income</button>
             <button type="button" class="btn btn-primary right-button-icon">Household</button>
-            <ul>
-              <li class="side-nav-beta__heading -active -open"><a><span>Budgeting tool</span></a></li>
-              <li>
-                <ul>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">Start</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">1. Income</a></li>
-                  <li class="side-nav-beta__sibling -current"><a href="#">2. Benefits</a></li>
-                  <li class="side-nav-beta__sibling"><a href="#">3. Household</a></li>
-                </ul>
-              </li>
-            </ul>
           </div>
+          <nav class="side-nav-beta tools">
+            <li class="side-nav-beta__heading -active -open"><a><span>Budgeting tool</span></a></li>
+            <li style="list-style:none;">
+              <ul>
+                <li class="side-nav-beta__sibling -visited"><a href="#">Start</a></li>
+                <li class="side-nav-beta__sibling -visited"><a href="#">1. Income</a></li>
+                <li class="side-nav-beta__sibling -current"><a href="#">2. Benefits</a></li>
+                <li class="side-nav-beta__sibling"><a href="#">3. Household</a></li>
+              </ul>
+            </li>
+          </nav>
         </div>
         <div class="print-only">
           <h2>This section is print only</h2>
