Fixed merge mistake for mixins.jade

--- a/public/adviser-real.html
+++ b/public/adviser-real.html
@@ -267,7 +267,7 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Check if you're eligible for Universal Credit" class="-current">Check if you're eligible for Universal Credit</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Check if you're eligible for Universal Credit" class="-current" item.="item.">Check if you're eligible for Universal Credit</a>
                 </li>
               </ul>
             </li>
