--- a/public/adviser-tool.html
+++ b/public/adviser-tool.html
@@ -75,9 +75,9 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="adviser.html" title="Content page">Content page</a>
+                <li class="side-nav-beta__sibling"><a href="adviser.html" title="Content page" item.="item.">Content page</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool" class="-current">Advice tool</a>
+                <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool" class="-current" item.="item.">Advice tool</a>
                 </li>
               </ul>
             </li>
