--- a/public/adviser.html
+++ b/public/adviser.html
@@ -127,9 +127,9 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Content page" class="-current">Content page</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Content page" class="-current" item.="item.">Content page</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool">Advice tool</a>
+                <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool" item.="item.">Advice tool</a>
                 </li>
               </ul>
             </li>
