--- a/public/content-tool.html
+++ b/public/content-tool.html
@@ -180,15 +180,15 @@
             <li class="side-nav-beta__heading -active -open"><a><span>While you're getting ESA</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Claiming ESA (filling in the ESA1 form" class="-current">Claiming ESA (filling in the ESA1 form</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Claiming ESA (filling in the ESA1 form" class="-current" item.="item.">Claiming ESA (filling in the ESA1 form</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Filling in the ESA50 form about your health and ability">Filling in the ESA50 form about your health and ability</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Filling in the ESA50 form about your health and ability" item.="item.">Filling in the ESA50 form about your health and ability</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Preparing for your ESA medical assessment">Preparing for your ESA medical assessment</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Preparing for your ESA medical assessment" item.="item.">Preparing for your ESA medical assessment</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Getting your ESA decision after the assessment">Getting your ESA decision after the assessment</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Getting your ESA decision after the assessment" item.="item.">Getting your ESA decision after the assessment</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="What to do if you're not awarded ESA">What to do if you're not awarded ESA</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="What to do if you're not awarded ESA" item.="item.">What to do if you're not awarded ESA</a>
                 </li>
               </ul>
             </li>
