--- a/public/content.html
+++ b/public/content.html
@@ -208,19 +208,19 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Before you claim PIP</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to fill in your PIP claim form" class="-current">How to fill in your PIP claim form</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to fill in your PIP claim form" class="-current" item.="item.">How to fill in your PIP claim form</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP">How to claim PIP</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP" item.="item.">How to claim PIP</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP if you have a terminal illness">How to claim PIP if you have a terminal illness</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP if you have a terminal illness" item.="item.">How to claim PIP if you have a terminal illness</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to fill in your claim form">How to fill in your claim form</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to fill in your claim form" item.="item.">How to fill in your claim form</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Getting evidence to support your PIP claim">Getting evidence to support your PIP claim</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Getting evidence to support your PIP claim" item.="item.">Getting evidence to support your PIP claim</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Preparing for your PIP assessment">Preparing for your PIP assessment</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Preparing for your PIP assessment" item.="item.">Preparing for your PIP assessment</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Changes that affect your PIP">Changes that affect your PIP</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Changes that affect your PIP" item.="item.">Changes that affect your PIP</a>
                 </li>
               </ul>
             </li>
