--- a/public/long-form.html
+++ b/public/long-form.html
@@ -374,13 +374,13 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Home improvements</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Before you get building work done" class="-current">Before you get building work done</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Before you get building work done" class="-current" item.="item.">Before you get building work done</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Problem with building work, decorating or home improvements">Problem with building work, decorating or home improvements</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Problem with building work, decorating or home improvements" item.="item.">Problem with building work, decorating or home improvements</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Cancelling building or decorating work">Cancelling building or decorating work</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Cancelling building or decorating work" item.="item.">Cancelling building or decorating work</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Building organisations">Building organisations</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Building organisations" item.="item.">Building organisations</a>
                 </li>
               </ul>
             </li>
