--- a/public/overlay.html
+++ b/public/overlay.html
@@ -67,9 +67,9 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 1" class="-current">Sibling page 1</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 1" class="-current" item.="item.">Sibling page 1</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 2">Sibling page 2</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 2" item.="item.">Sibling page 2</a>
                 </li>
               </ul>
             </li>
